fix: fixes margin on mobile devices

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -28,6 +28,7 @@
 
 @media (max-width: 768px) {
   .header-logo {
+    margin-left: 0;
     height: 45px;
   }
 
@@ -38,6 +39,7 @@
 
 @media (max-width: 480px) {
   .header-logo {
+    margin-left: 0;
     height: 30px;
   }
 
